--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Angular 2 Tour of Heroes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Styles.css">
 
   <!-- IE required polyfills, in this exact order -->
   <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -14,8 +14,8 @@
   <script src="node_modules/systemjs/dist/system.src.js"></script>
 
   <script>
-    System.import('system-config.js').then(function () {
-        System.import('main');
+    System.import('SystemConfig.js').then(function () {
+        System.import('Main'); 
       }).catch(console.error.bind(console));
   </script>
 </head>
